--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ repositories {
 }
 
 dependencies {
-  testCompile 'com.codeborne:selenide:4.10.01'
-  testCompile 'junit:junit:4.12'
-  testCompile 'org.hamcrest:hamcrest-all:1.3'
+  testCompile 'com.codeborne:selenide:4.11.2'
+	testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
+	testCompile 'org.junit.jupiter:junit-jupiter-params:5.2.0'
+  testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
 }
 
 defaultTasks 'clean', 'test'
