--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 dependencies {
-  testCompile 'com.codeborne:selenide:4.11.2'
+  testCompile 'com.codeborne:selenide:4.12.2'
   testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
   testCompile 'org.junit.jupiter:junit-jupiter-params:5.2.0'
   testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
@@ -19,6 +19,10 @@ dependencies {
 defaultTasks 'clean', 'test'
 
 [compileJava, compileTestJava]*.options.collect {options -> options.encoding = 'UTF-8'}
+
+test {
+  useJUnitPlatform()
+}
 
 task chrome(type: Test) {
   systemProperties['selenide.browser'] = 'chrome'
@@ -35,3 +39,4 @@ task ie(type: Test) {
 task edge(type: Test) {
   systemProperties['selenide.browser'] = 'edge'
 }
+
